--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -28,7 +28,7 @@ jobs:
       run: cargo clippy --all-targets --all-features -- -D warnings
     - name: Build
       if: ${{ !cancelled() }}
-      run: cargo build --verbose --examples --tests --all-features --features="async tokio/rt-multi-thread"
+      run: cargo build --verbose --examples --tests --all-features
     - name: Abort on error
       if: ${{ failure() }}
       run: echo "Some of jobs failed" && false
