--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -33,17 +33,17 @@ jobs:
       if: ${{ failure() }}
       run: echo "Some of jobs failed" && false
 
-  semver:
-    name: Check semver
-    strategy:
-      matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
-    runs-on: ${{ matrix.os }}
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions-rs/toolchain@v1
-        with:
-          profile: minimal
-          toolchain: stable
-          override: true
-      - uses: obi1kenobi/cargo-semver-checks-action@v2
+  # semver:
+  #   name: Check semver
+  #   strategy:
+  #     matrix:
+  #       os: [ubuntu-latest, macos-latest, windows-latest]
+  #   runs-on: ${{ matrix.os }}
+  #   steps:
+  #     - uses: actions/checkout@v4
+  #     - uses: actions-rs/toolchain@v1
+  #       with:
+  #         profile: minimal
+  #         toolchain: stable
+  #         override: true
+  #     - uses: obi1kenobi/cargo-semver-checks-action@v2
